--- a/LearningPlusWebApp/Views/Home/Index.cshtml
+++ b/LearningPlusWebApp/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 <section id="intro">
 
     <div class="intro-content">
-        <h2>Making <span>your ideas</span><br>happen!</h2>
+        <h2>Making <span>your success</span><br>happen!</h2>
         <div>
             <a href="#about" class="btn-get-started scrollto">Get Started</a>
             <a href="#portfolio" class="btn-projects scrollto">Our Projects</a>
@@ -100,29 +100,6 @@
 
         </div>
     </section><!-- #services -->
-    <!--==========================
-      Clients Section
-    ============================-->
-    <section id="clients" class="wow fadeInUp">
-        <div class="container">
-            <div class="section-header">
-                <h2>Clients</h2>
-                <p>Sed tamen tempor magna labore dolore dolor sint tempor duis magna elit veniam aliqua esse amet veniam enim export quid quid veniam aliqua eram noster malis nulla duis fugiat culpa esse aute nulla ipsum velit export irure minim illum fore</p>
-            </div>
-
-            <div class="owl-carousel clients-carousel">
-                <img src="img/clients/client-1.png" alt="">
-                <img src="img/clients/client-2.png" alt="">
-                <img src="img/clients/client-3.png" alt="">
-                <img src="img/clients/client-4.png" alt="">
-                <img src="img/clients/client-5.png" alt="">
-                <img src="img/clients/client-6.png" alt="">
-                <img src="img/clients/client-7.png" alt="">
-                <img src="img/clients/client-8.png" alt="">
-            </div>
-
-        </div>
-    </section><!-- #clients -->
     <!--==========================
       Our Portfolio Section
     ============================-->
@@ -299,23 +276,7 @@
 
         </div>
     </section><!-- #testimonials -->
-    <!--==========================
-      Call To Action Section
-    ============================-->
-    <section id="call-to-action" class="wow fadeInUp">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-9 text-center text-lg-left">
-                    <h3 class="cta-title">Call To Action</h3>
-                    <p class="cta-text"> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                </div>
-                <div class="col-lg-3 cta-btn-container text-center">
-                    <a class="cta-btn align-middle" href="#">Call To Action</a>
-                </div>
-            </div>
 
-        </div>
-    </section><!-- #call-to-action -->
     <!--==========================
       Our Team Section
     ============================-->
