--- a/LearningPlusWebApp/Views/Shared/_Layout.cshtml
+++ b/LearningPlusWebApp/Views/Shared/_Layout.cshtml
@@ -8,14 +8,14 @@
     <meta content="" name="description">
 
     <!-- Favicons -->
-    <link href="img/favicon.png" rel="icon">
-    <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="/img/favicon.png" rel="icon">
+    <link href="/img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800|Montserrat:300,400,700" rel="stylesheet">
 
     <!-- Bootstrap CSS File -->
-    <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Libraries CSS Files -->
     <link href="/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
@@ -26,7 +26,7 @@
     <link href="/lib/ionicons/css/ionicons.min.css" rel="stylesheet">
 
     <!-- Main Stylesheet File -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
 
     <!-- =======================================================
       Theme Name: Reveal
@@ -64,7 +64,7 @@
         <div class="container">
 
             <div id="logo" class="pull-left">
-                <h1><a href="#body" class="scrollto">Reve<span>al</span></a></h1>
+                <h1><a href="#body" class="scrollto">Learning<span>Plus</span></a></h1>
                 <!-- Uncomment below if you prefer to use an image logo -->
                 <!-- <a href="#body"><img src="img/logo.png" alt="" title="" /></a>-->
             </div>
@@ -91,9 +91,6 @@
         </div>
     </header><!-- #header -->
 
-
-    <partial name="_CookieConsentPartial" />
-
     @RenderBody()
     <!--==========================
       Footer
@@ -118,22 +115,22 @@
     <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
     <!-- JavaScript Libraries -->
-    <script src="~/lib/jquery/jquery.min.js"></script>
-    <script src="~/lib/jquery/jquery-migrate.min.js"></script>
-    <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="~/lib/easing/easing.min.js"></script>
-    <script src="~/lib/superfish/hoverIntent.js"></script>
-    <script src="~/lib/superfish/superfish.min.js"></script>
-    <script src="~/lib/wow/wow.min.js"></script>
-    <script src="~/lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="~/lib/magnific-popup/magnific-popup.min.js"></script>
-    <script src="~/lib/sticky/sticky.js"></script>
+    <script src="/lib/jquery/jquery.min.js"></script>
+    <script src="/lib/jquery/jquery-migrate.min.js"></script>
+    <script src="/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/lib/easing/easing.min.js"></script>
+    <script src="/lib/superfish/hoverIntent.js"></script>
+    <script src="/lib/superfish/superfish.min.js"></script>
+    <script src="/lib/wow/wow.min.js"></script>
+    <script src="/lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="/lib/magnific-popup/magnific-popup.min.js"></script>
+    <script src="/lib/sticky/sticky.js"></script>
 
     <!-- Contact Form JavaScript File -->
-    <script src="~/contactform/contactform.js"></script>
+    <script src="/contactform/contactform.js"></script>
 
     <!-- Template Main Javascript File -->
-    <script src="~/js/main.js"></script>
+    <script src="/js/main.js"></script>
 
     @RenderSection("Scripts", required: false)
 </body>
