--- a/LearningPlusWebApp/Views/Home/Index.cshtml
+++ b/LearningPlusWebApp/Views/Home/Index.cshtml
@@ -400,7 +400,7 @@
             <div class="form">
                 <div id="sendmessage">Your message has been sent. Thank you!</div>
                 <div id="errormessage"></div>
-                <form action="" method="post" role="form" class="contactForm">
+                <form asp-controller="Email" asp-action="SendFromHome" method="post" role="form" class="contactForm">
                     <div class="form-row">
                         <div class="form-group col-md-6">
                             <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
