Catching up with the local repository

--- a/LearningPlusWebApp/wwwroot/css/style.css
+++ b/LearningPlusWebApp/wwwroot/css/style.css
@@ -1137,3 +1137,15 @@ body.mobile-nav-active #mobile-nav-toggle {
     margin-top: 20px;
   }
 }
+
+/*--------------------------------------------------------------
+# Custom
+--------------------------------------------------------------*/
+
+.half-width {
+    width: 50%;
+}
+
+.quad-width {
+    width: 25%;
+}
