--- a/LearningPlusWebApp/Views/Shared/_Layout.cshtml
+++ b/LearningPlusWebApp/Views/Shared/_Layout.cshtml
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Reveal Bootstrap Template</title>
+    <title>Lerning Plus</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
 
     <!-- Favicons -->
-    <link href="/img/favicon.png" rel="icon">
+    <link href="/img/lpicon.PNG" rel="icon">
     <link href="/img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
@@ -64,7 +64,7 @@
         <div class="container">
 
             <div id="logo" class="pull-left">
-                <h1><a href="#body" class="scrollto">Learning<span>Plus</span></a></h1>
+                <h1><a asp-action="Index" class="scrollto">Learning<span>Plus</span></a></h1>
                 <!-- Uncomment below if you prefer to use an image logo -->
                 <!-- <a href="#body"><img src="img/logo.png" alt="" title="" /></a>-->
             </div>
