--- a/LearningPlusWebApp/Views/Shared/_Layout.cshtml
+++ b/LearningPlusWebApp/Views/Shared/_Layout.cshtml
@@ -25,15 +25,10 @@
     <link href="/lib/magnific-popup/magnific-popup.css" rel="stylesheet">
     <link href="/lib/ionicons/css/ionicons.min.css" rel="stylesheet">
 
+    @RenderSection("Head", false)
+
     <!-- Main Stylesheet File -->
     <link href="/css/style.css" rel="stylesheet">
-
-    <!-- =======================================================
-      Theme Name: Reveal
-      Theme URL: https://bootstrapmade.com/reveal-bootstrap-corporate-template/
-      Author: BootstrapMade.com
-      License: https://bootstrapmade.com/license/
-    ======================================================= -->
 </head>
 
 <body id="body">
@@ -57,39 +52,7 @@
         </div>
     </section>
 
-    <!--==========================
-      Header
-    ============================-->
-    <header id="header">
-        <div class="container">
-
-            <div id="logo" class="pull-left">
-                <h1><a asp-action="Index" class="scrollto">Learning<span>Plus</span></a></h1>
-                <!-- Uncomment below if you prefer to use an image logo -->
-                <!-- <a href="#body"><img src="img/logo.png" alt="" title="" /></a>-->
-            </div>
-
-            <nav id="nav-menu-container">
-                <ul class="nav-menu">
-                    <li class="menu-active"><a href="#body">Home</a></li>
-                    <li><a href="#about">About Us</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="#team">Team</a></li>
-                    <li class="menu-has-children">
-                        <a href="">Drop Down</a>
-                        <ul>
-                            <li><a href="#">Drop Down 1</a></li>
-                            <li><a href="#">Drop Down 3</a></li>
-                            <li><a href="#">Drop Down 4</a></li>
-                            <li><a href="#">Drop Down 5</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav><!-- #nav-menu-container -->
-        </div>
-    </header><!-- #header -->
+    <partial name="_HeaderPartial" />
 
     @RenderBody()
     <!--==========================
@@ -101,12 +64,6 @@
                 &copy; Copyright <strong>Reveal</strong>. All Rights Reserved
             </div>
             <div class="credits">
-                <!--
-                  All the links in the footer should remain intact.
-                  You can delete the links only if you purchased the pro version.
-                  Licensing information: https://bootstrapmade.com/license/
-                  Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Reveal
-                -->
                 Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
             </div>
         </div>
