Register page introduced

--- a/LearningPlusWebApp/Views/Shared/_Layout.cshtml
+++ b/LearningPlusWebApp/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
     <link href="/css/style.css" rel="stylesheet">
 </head>
 
-<body id="body">
+<body id="body" class="pt-0">
 
     <!--==========================
       Top Bar
