--- a/LearningPlusWebApp/Views/Shared/_HeaderPartial.cshtml
+++ b/LearningPlusWebApp/Views/Shared/_HeaderPartial.cshtml
@@ -5,7 +5,7 @@
     <div class="container">
 
         <div id="logo" class="pull-left">
-            <h1><a asp-action="Index" class="scrollto">Learning<span>Plus</span></a></h1>
+            <h1><a asp-controller="Home" asp-action="Index" class="scrollto">Learning<span>Plus</span></a></h1>
             <!-- Uncomment below if you prefer to use an image logo -->
             <!-- <a href="#body"><img src="img/logo.png" alt="" title="" /></a>-->
         </div>
@@ -13,10 +13,11 @@
         <nav id="nav-menu-container">
             <ul class="nav-menu">
                 <li class="menu-active"><a href="/">Home</a></li>
+
                 @if (User.IsInRole("Admin"))
                 {
                     <li class="menu-has-children">
-                        <a >Контрол</a>
+                        <a>Контрол на</a>
                         <ul>
                             <li><a asp-area="Administrator" asp-controller="Users" asp-action="RoleControl">Роли</a></li>
                             <li><a href="#">Drop Down 3</a></li>
@@ -25,20 +26,28 @@
                         </ul>
                     </li>
                 }
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#team">Team</a></li>
-                <li class="menu-has-children">
-                    <a href="">Drop Down</a>
-                    <ul>
-                        <li><a href="#">Drop Down 1</a></li>
-                        <li><a href="#">Drop Down 3</a></li>
-                        <li><a href="#">Drop Down 4</a></li>
-                        <li><a href="#">Drop Down 5</a></li>
-                    </ul>
-                </li>
-                <li><a href="#contact">Contact</a></li>
+
+                @if (User.IsInRole("Admin") || User.IsInRole("Teacher"))
+                {
+                    <li><a asp-controller="Users" asp-action="RegisterStudent">Регистрирай ученик</a></li>
+                }
+                else
+                {
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#team">Team</a></li>
+                    <li class="menu-has-children">
+                        <a href="">Drop Down</a>
+                        <ul>
+                            <li><a href="#">Drop Down 1</a></li>
+                            <li><a href="#">Drop Down 3</a></li>
+                            <li><a href="#">Drop Down 4</a></li>
+                            <li><a href="#">Drop Down 5</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#contact">Contact</a></li>
+                }
+
                 @if (User.Identity.IsAuthenticated)
                 {
                     <li><a asp-controller="Users" asp-action="Logout">Изход</a></li>
