--- a/LearningPlusWebApp/Views/Shared/_HeaderPartial.cshtml
+++ b/LearningPlusWebApp/Views/Shared/_HeaderPartial.cshtml
@@ -27,6 +27,11 @@
                     </li>
                 }
 
+                @if (User.IsInRole("Teacher"))
+                {
+                    <li><a asp-area="Teacher" asp-controller="Users" asp-action="UserApprovals">Одобрение регистрации</a></li>
+                }
+
                 @if (User.IsInRole("Admin") || User.IsInRole("Teacher"))
                 {
                     <li><a asp-controller="Users" asp-action="RegisterStudent">Регистрирай ученик</a></li>
@@ -55,6 +60,7 @@
                 else
                 {
                     <li><a asp-controller="Users" asp-action="Login">Вход</a></li>
+                    <li><a asp-controller="Users" asp-action="RegisterStudent">Регистрирай се</a></li>
                 }
             </ul>
         </nav><!-- #nav-menu-container -->
