--- a/LearningPlusWebApp/Views/Users/Login.cshtml
+++ b/LearningPlusWebApp/Views/Users/Login.cshtml
@@ -23,7 +23,7 @@
     </div>
 </form>
 <div class="text-center"><a href="">Forgot your password?</a></div>
-<div class="text-center"><a href="">Register as a new user</a></div>
+<div class="text-center"><a asp-controller="Users" asp-action="RegisterStudent">Register as a new user</a></div>
 <hr class="hr-login quad-width" />
 <div class="text-center">
     <form asp-action="FacebookLogin" method="post">
