--- a/LearningPlusWebApp/Views/Home/IndexLoggedIn.cshtml
+++ b/LearningPlusWebApp/Views/Home/IndexLoggedIn.cshtml
@@ -2,6 +2,10 @@
     ViewData["Title"] = "LoggedIn";
 }
 
+@section Head{
+    <link rel="stylesheet" href="~/css/news.css">
+}
+
 <!--==========================
     Intro Section
   ============================-->
@@ -39,4 +43,19 @@
     </div>
 
 </section><!-- #intro -->
+<!--==========================
+     News box
+   ============================-->
+<div class="d-flex justify-content-center">
+    <div class="holder">
+        <ul id="ticker01">
+            <li><span>10/10/2007</span><a href="#">The first thing that most Javascript programmers</a></li>
+            <li><span>10/10/2007</span><a href="#">End up doing is adding some code</a></li>
+            <li><span>10/10/2007</span><a href="#">The code that you want to run</a></li>
+        </ul>
+    </div>
+</div>
 
+@section Scripts{
+    <script src="~/js/news.js"></script>
+}
