The application now runs on different projects.

--- a/LearningPlusWebApp/Areas/Administrator/Views/Users/RoleControl.cshtml
+++ b/LearningPlusWebApp/Areas/Administrator/Views/Users/RoleControl.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<LearningPlusWebApp.Areas.Administrator.ViewModels.UsersListViewModel>
+﻿@model IEnumerable<LearningPlus.Web.Areas.Administrator.ViewModels.UsersListViewModel>
 @{
     ViewData["Title"] = "Управление на ролите";
 }
