--- a/LearningPlusWebApp/Areas/Teacher/Views/Users/UserApprovals.cshtml
+++ b/LearningPlusWebApp/Areas/Teacher/Views/Users/UserApprovals.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<LearningPlusWebApp.Areas.Teacher.ViewModels.UserApprovalViewModel>
+﻿@model IEnumerable<LearningPlus.Web.Areas.Teacher.ViewModels.UserApprovalViewModel>
 @{
     ViewData["Title"] = "Одобрение на потребители";
 }
