--- a/LearningPlusWebApp/Areas/Teacher/Views/Users/UserEdit.cshtml
+++ b/LearningPlusWebApp/Areas/Teacher/Views/Users/UserEdit.cshtml
@@ -1,4 +1,4 @@
-﻿@model LearningPlusWebApp.Areas.Teacher.ViewModels.UserDetailsViewModel
+﻿@model LearningPlus.Web.Areas.Teacher.ViewModels.UserDetailsViewModel
 
 @{
     ViewData["Title"] = "Корекция на потребител";
