--- a/LearningPlusWebApp/Views/Users/RegisterStudent.cshtml
+++ b/LearningPlusWebApp/Views/Users/RegisterStudent.cshtml
@@ -1,4 +1,4 @@
-﻿@model LearningPlusWebApp.ViewModels.Users.RegisterStudentViewModel
+﻿@model LearningPlus.Web.ViewModels.Users.RegisterStudentViewModel
 
 @{
     ViewData["Title"] = "Регистриране на ученик";
