--- a/LearningPlusWebApp/Areas/Administrator/Views/_ViewImports.cshtml
+++ b/LearningPlusWebApp/Areas/Administrator/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using LearningPlusWebApp.Models
+@using LearningPlus.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
