--- a/LearningPlusWebApp/Areas/Teacher/Views/Users/UserDetails.cshtml
+++ b/LearningPlusWebApp/Areas/Teacher/Views/Users/UserDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@model LearningPlusWebApp.Areas.Teacher.ViewModels.UserDetailsViewModel
+﻿@model LearningPlus.Web.Areas.Teacher.ViewModels.UserDetailsViewModel
 
 @{ ViewData["Title"] = "Детайли за потребител";}
 
