--- a/LearningPlusWebApp/Views/_ViewImports.cshtml
+++ b/LearningPlusWebApp/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using LearningPlusWebApp
-@using LearningPlusWebApp.Models
+﻿@using LearningPlus.Web
+@using LearningPlus.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
