--- a/src/LearningPlusWebApp/Views/_ViewImports.cshtml
+++ b/src/LearningPlusWebApp/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using LearningPlus.Web
 @using LearningPlus.Web.Models
+@using LearningPlus.Web.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
