--- a/src/LearningPlusWebApp/Views/Home/IndexLoggedIn.cshtml
+++ b/src/LearningPlusWebApp/Views/Home/IndexLoggedIn.cshtml
@@ -34,11 +34,8 @@
         <ul id="ticker01">
             @foreach (var news in Model)
             {
-                <li><span>@news.CreatedOn</span><a href="#">@news.Message</a></li>
+                <li><span>@news.CreatedOn.ToString("MM/dd/yyyy hh:mm")</span><a href="#"> @news.Message</a></li>
             }
-            <li><span>10/10/2007</span><a href="#">The first thing that most Javascript programmers</a></li>
-            <li><span>10/10/2007</span><a href="#">End up doing is adding some code</a></li>
-            <li><span>10/10/2007</span><a href="#">The code that you want to run</a></li>
         </ul>
     </div>
 </div>
