Create and edit news now available for Admins and Teachers

--- a/src/LearningPlusWebApp/Views/Home/IndexLoggedIn.cshtml
+++ b/src/LearningPlusWebApp/Views/Home/IndexLoggedIn.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<NewsLoggedInViewModel>
 
 @{
-    ViewData["Title"] = "LoggedIn";
+    ViewData["Title"] = "Добре дошли!";
 }
 
 @section Head{
@@ -29,17 +29,33 @@
 <!--==========================
      News box
    ============================-->
-<div class="d-flex justify-content-center">
-    <div class="holder">
-        <ul id="ticker01">
-            @foreach (var news in Model)
-            {
-                <li><span>@news.CreatedOn.ToString("MM/dd/yyyy hh:mm")</span><a href="#"> @news.Message</a></li>
-            }
-        </ul>
+<div class="col col-md-4 ">
+    <div class="text-center">
+        <h3>Новини</h3>
     </div>
-</div>
+    <div class="border border-success">
+        <div class="holder half-width">
+            <ul id="ticker01">
+                @foreach (var news in Model)
+                {
+                    <li><span>@news.CreatedOn.ToString("MM/dd/yyyy hh:mm")</span><a asp-controller="News" asp-action="Details" asp-route-id="@news.Id.ToString()"> @news.Message</a></li>
+                }
+            </ul>
+        </div>
+    </div>
+    @if (User.IsInRole("Admin") || User.IsInRole("Teacher"))
+    {
+        <div class="d-flex justify-content-between">
+            <div class="col col-md-2">
+                <a asp-controller="News" asp-action="Create">Създай</a>
+            </div>
 
+            <div class="col col-md-2">
+                <a asp-controller="News" asp-action="Create">Архив</a>
+            </div>
+        </div>
+    }
+</div>
 @section Scripts{
     <script src="~/js/news.js"></script>
 }
