--- a/src/LearningPlusWebApp/Views/_ViewImports.cshtml
+++ b/src/LearningPlusWebApp/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using LearningPlus.Web
 @using LearningPlus.Web.Models
 @using LearningPlus.Web.ViewModels
+@using LearningPlus.Web.ViewModels.News
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
