--- a/src/LearningPlusWebApp/wwwroot/css/site.css
+++ b/src/LearningPlusWebApp/wwwroot/css/site.css
@@ -30,6 +30,17 @@ body {
     color: red;
 }
 
+#btnaslink {
+    color: #50d8af;
+    transition: 0.5s;
+    background: none;
+    border: none;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+}
+
 .logo-btn {
     background-color: #50d8af;
 }
