Archived news view now available.

--- a/src/LearningPlusWebApp/Views/Home/IndexLoggedIn.cshtml
+++ b/src/LearningPlusWebApp/Views/Home/IndexLoggedIn.cshtml
@@ -51,7 +51,7 @@
             </div>
 
             <div class="col col-md-2">
-                <a asp-controller="News" asp-action="Create">Архив</a>
+                <a asp-controller="News" asp-action="Archive">Архив</a>
             </div>
         </div>
     }
