--- a/src/LearningPlusWebApp/Views/Shared/_HeaderPartial.cshtml
+++ b/src/LearningPlusWebApp/Views/Shared/_HeaderPartial.cshtml
@@ -27,14 +27,19 @@
                     </li>
                 }
 
-                @if (User.IsInRole("Teacher"))
-                {
-                    <li><a asp-area="Teacher" asp-controller="Users" asp-action="UserApprovals">Одобрение регистрации</a></li>
-                }
-
                 @if (User.IsInRole("Admin") || User.IsInRole("Teacher"))
                 {
-                    <li><a asp-controller="Users" asp-action="RegisterStudent">Регистрирай ученик</a></li>
+                    <li><a asp-controller="Classes" asp-action="Schedule">График</a></li>
+                    <li class="menu-has-children">
+                        <a>Ученици</a>
+                        <ul>
+                            <li>
+                            <li><a asp-controller="Users" asp-action="RegisterStudent">Регистрирай ученик</a></li>
+                            <li><a asp-area="Teacher" asp-controller="Users" asp-action="UserApprovals">Одобрение регистрации</a></li>
+                            <li><a href="#">Drop Down 4</a></li>
+                            <li><a href="#">Drop Down 5</a></li>
+                        </ul>
+                    </li>
                 }
                 else
                 {
