Create class function introduced. Tests to follow.

--- a/src/LearningPlusWebApp/Views/Shared/_HeaderPartial.cshtml
+++ b/src/LearningPlusWebApp/Views/Shared/_HeaderPartial.cshtml
@@ -36,7 +36,7 @@
                             <li>
                             <li><a asp-controller="Users" asp-action="RegisterStudent">Регистрирай ученик</a></li>
                             <li><a asp-area="Teacher" asp-controller="Users" asp-action="UserApprovals">Одобрение регистрации</a></li>
-                            <li><a href="#">Drop Down 4</a></li>
+                            <li><a asp-controller="Classes" asp-action="Create">Запиши за урок</a></li>
                             <li><a href="#">Drop Down 5</a></li>
                         </ul>
                     </li>
