--- a/src/LearningPlusWebApp/Views/Classes/Create.cshtml
+++ b/src/LearningPlusWebApp/Views/Classes/Create.cshtml
@@ -37,7 +37,7 @@
                 <select name="discipline">
                     @foreach (var discp in ViewBag.Disciplines)
                     {
-                        <option value="@discp">@discp</option>
+                        <option value="@discp">@discp.ToString().Replace("_"," ")</option>
                     }
                 </select>
                 <span asp-validation-for="Discipline" class="text-danger"></span>
@@ -53,29 +53,29 @@
                 <span asp-validation-for="StudentIds" class="text-danger"></span>
             </div>
 
-                <div class="form-group">
-                    <label asp-for="TeacherId" class="control-label"></label>
-                    <select name="teacherid">
-                        @foreach (var teacher in ViewBag.Teachers)
-                        {
-                            <option value="@teacher.Key">@teacher.Value</option>
-                        }
-                    </select>
-                    <span asp-validation-for="TeacherId" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Room" class="control-label"></label>
-                    <select name="room">
-                        @foreach (var room in ViewBag.Rooms)
-                        {
-                            <option value="@room">@room.ToString().Replace('_', ' ')</option>
-                        }
-                    </select>
-                    <span asp-validation-for="Room" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-primary" />
-                </div>
+            <div class="form-group">
+                <label asp-for="TeacherId" class="control-label"></label>
+                <select name="teacherid">
+                    @foreach (var teacher in ViewBag.Teachers)
+                    {
+                        <option value="@teacher.Key">@teacher.Value</option>
+                    }
+                </select>
+                <span asp-validation-for="TeacherId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Room" class="control-label"></label>
+                <select name="room">
+                    @foreach (var room in ViewBag.Rooms)
+                    {
+                        <option value="@room">@room.ToString().Replace('_', ' ')</option>
+                    }
+                </select>
+                <span asp-validation-for="Room" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary" />
+            </div>
         </form>
     </div>
 </div>
