--- a/src/LearningPlusWebApp/Views/Classes/Create.cshtml
+++ b/src/LearningPlusWebApp/Views/Classes/Create.cshtml
@@ -1,20 +1,18 @@
 ﻿@model LearningPlus.Web.ViewModels.Classes.ClassesCreateViewModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Запиши час";
 }
 
-<h1>Create</h1>
-
-<h4>ClassesCreateViewModel</h4>
+<h1 class="text-center">@ViewData["Title"]</h1>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="row d-flex justify-content-center">
+    <div class="col-md-8 text-center">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="DayOfWeek" class="control-label"></label>
-                <select name="dayofweek">
+                <label asp-for="DayOfWeek" class="control-label col-md-3 text-left"></label>
+                <select class="col-md-3 text-right" name="dayofweek">
                     @foreach (var day in ViewBag.Days)
                     {
                         <option value="@day">@day</option>
@@ -23,8 +21,8 @@
                 <span asp-validation-for="DayOfWeek" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TimeOfDay" class="control-label"></label>
-                <select name="timeofday">
+                <label asp-for="TimeOfDay" class="control-label col-md-3 text-left"></label>
+                <select class="col-md-3" name="timeofday">
                     @foreach (var hour in ViewBag.FullHours)
                     {
                         <option value="@hour">@hour</option>
@@ -33,8 +31,8 @@
                 <span asp-validation-for="TimeOfDay" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Discipline" class="control-label"></label>
-                <select name="discipline">
+                <label asp-for="Discipline" class="control-label col-md-3 text-left"></label>
+                <select class="col-md-3" name="discipline">
                     @foreach (var discp in ViewBag.Disciplines)
                     {
                         <option value="@discp">@discp.ToString().Replace("_"," ")</option>
@@ -43,19 +41,19 @@
                 <span asp-validation-for="Discipline" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="StudentIds" class="control-label"></label>
-                <select multiple name="studentids" size="6">
+                <label asp-for="StudentIds" class="control-label  col-md-3 text-left"></label>
+                <select class="col-md-3" multiple name="studentids" size="6">
                     @foreach (var student in ViewBag.Children)
                     {
-                        <option value="@student.Key">@student.Value</option>
+                        <option class="text-center" value="@student.Key">@student.Value</option>
                     }
                 </select>
                 <span asp-validation-for="StudentIds" class="text-danger"></span>
             </div>
 
             <div class="form-group">
-                <label asp-for="TeacherId" class="control-label"></label>
-                <select name="teacherid">
+                <label asp-for="TeacherId" class="control-label col-md-3 text-left"></label>
+                <select class="col-md-3" name="teacherid">
                     @foreach (var teacher in ViewBag.Teachers)
                     {
                         <option value="@teacher.Key">@teacher.Value</option>
@@ -64,8 +62,8 @@
                 <span asp-validation-for="TeacherId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Room" class="control-label"></label>
-                <select name="room">
+                <label asp-for="Room" class="control-label col-md-3 text-left"></label>
+                <select class="col-md-3" name="room">
                     @foreach (var room in ViewBag.Rooms)
                     {
                         <option value="@room">@room.ToString().Replace('_', ' ')</option>
