Chat with SignalR presented

--- a/src/LearningPlusWebApp/Views/Classes/Edit.cshtml
+++ b/src/LearningPlusWebApp/Views/Classes/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LearningPlus.Web.ViewModels.Classes.ClassesCreateViewModel
 
 @{
-    ViewData["Title"] = "Запиши час";
+    ViewData["Title"] = "Промени час";
 }
 
 <h1 class="text-center">@ViewData["Title"]</h1>
