--- a/src/LearningPlusWebApp/Views/Home/Chat.cshtml
+++ b/src/LearningPlusWebApp/Views/Home/Chat.cshtml
@@ -2,6 +2,10 @@
     ViewBag.Title = "Chat";
 }
 
+@section Head{
+    <link href="~/css/site.css" rel="stylesheet" />
+}
+
 <h2>@ViewBag.Title</h2>
 
 <div class="container">
@@ -10,7 +14,7 @@
             <div id="message-holder" class="mt-3 d-flex justify-content-start">
                 <h4>Message </h4>
                 <input class="w-75 ml-4 pl-3" type="text" id="messageInput" placeholder="Message..." />
-                <button id="sendButton" class="ml-4 btn btn-dark"><h5>Send</h5></button>
+                <button id="sendButton" class="ml-4 btn logo-btn"><h5>Send</h5></button>
             </div>
         </div>
     </div>
@@ -22,26 +26,4 @@
 @section Scripts {
     <script src="~/lib/@@aspnet/signalr/dist/browser/signalr.min.js"></script>
     <script src="~/js/site.js"></script>
-    <script>
-        var connection =
-            new signalR.HubConnectionBuilder()
-                .withUrl("/chat")
-                .build();
-
-        connection.on("NewMessage",
-            function (message) {
-                var chatInfo = `<div>[${message.user}] ${message.text}</div>`;
-                $("#messagesList").append(chatInfo);
-            });
-
-        $("#sendButton").click(function () {
-            var message = $("#messageInput").val();
-            console.log("new Message");
-            connection.invoke("Send", message);
-        });
-
-        connection.start().catch(function (err) {
-            return console.error(err.toString());
-        });
-    </script>
 }
