--- a/src/LearningPlusWebApp/wwwroot/css/site.css
+++ b/src/LearningPlusWebApp/wwwroot/css/site.css
@@ -34,6 +34,10 @@ body {
     width: 90%
 }
 
+.width-75 {
+    width: 75%
+}
+
 /* Makes a btn looks like a link */
 #btnaslink {
     color: #50d8af;
