--- a/src/LearningPlusWebApp/Views/Homeworks/UploadHomework.cshtml
+++ b/src/LearningPlusWebApp/Views/Homeworks/UploadHomework.cshtml
@@ -11,7 +11,7 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Upload" enctype="multipart/form-data">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="CourseId" class="control-label col-md-3 text-left"></label>
                 <select class="col-md-3" name="courseid">
@@ -34,4 +34,8 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
+
+@section Scripts{
+    <partial name="_ValidationScriptsPartial" />
+}
 
