Homework Views improvements

--- a/src/Web/LearningPlusWebApp/Views/Homeworks/UploadHomework.cshtml
+++ b/src/Web/LearningPlusWebApp/Views/Homeworks/UploadHomework.cshtml
@@ -1,20 +1,23 @@
 ﻿@model LearningPlus.Web.ViewModels.Homework.HomeworkUploadViewModel
 
 @{
-    ViewData["Title"] = "Upload";
+    ViewData["Title"] = "Качи домашно";
 }
 
-<h1>Upload</h1>
+@section Head{
+    <link href="~/css/site.css" rel="stylesheet">
+}
 
-<h4>HomeworkUploadViewModel</h4>
+<h1 class="text-center">@ViewData["Title"]</h1>
+
 <hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Upload" enctype="multipart/form-data">
+    <div class="col d-flex justify-content-center">
+        <form asp-action="Upload" class="container-fluid" enctype="multipart/form-data">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="CourseId" class="control-label col-md-3 text-left"></label>
-                <select class="col-md-3" name="courseid">
+                <label asp-for="CourseId" class="control-label col-md-4 text-right"></label>
+                <select class="col-md-3 text-center" name="courseid">
                     @foreach (var course in ViewBag.Classes)
                     {
                         <option value="@course.Id">@course.Discipline @course.DayOfWeek @course.TimeOfDay</option>
@@ -22,18 +25,21 @@
                 </select>
                 <span asp-validation-for="CourseId" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Homework"></label>
-                <input type="file" asp-for="Homework" />
+            <div class="form-group control-label">
+                <label asp-for="Homework" class="col-md-4 text-right"></label>
+                <input type="file" asp-for="Homework" class="col-md-5 ml-3" />
             </div>
-            <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="row d-flex justify-content-center">
+                <div class="col-3"></div>
+                <input type="submit" value="Запази" class="btn logo-btn col col-md-1" />
+                <div class="col-2"></div>
+                <a asp-action="Index" class="col col-md-1">Назад</a>
+                <div class="col-4"></div>
+            </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts{
     <partial name="_ValidationScriptsPartial" />
