--- a/src/Web/LearningPlusWebApp/Views/Home/Index.cshtml
+++ b/src/Web/LearningPlusWebApp/Views/Home/Index.cshtml
@@ -8,11 +8,11 @@
 <section id="intro">
 
     <div class="intro-content">
-        <h2>Making <span>your success</span><br>happen!</h2>
-        <div>
-            <a href="#about" class="btn-get-started scrollto">Get Started</a>
-            <a href="#portfolio" class="btn-projects scrollto">Our Projects</a>
-        </div>
+        <h2>Направи <span>своя</span><br>успех реалност!</h2>
+        @*<div>
+                <a href="#about" class="btn-get-started scrollto">Get Started</a>
+                <a href="#portfolio" class="btn-projects scrollto">Our Projects</a>
+            </div>*@
     </div>
 
     <div id="intro-carousel" class="owl-carousel">
@@ -52,7 +52,6 @@
 
         </div>
     </section><!-- #about -->
-   
     <!--==========================
       Services Section
     ============================-->
@@ -368,24 +367,24 @@
                 <div class="col-md-4">
                     <div class="contact-address">
                         <i class="ion-ios-location-outline"></i>
-                        <h3>Address</h3>
-                        <address>A108 Adam Street, NY 535022, USA</address>
+                        <h3>Адрес</h3>
+                        <address>ж.к. Хладилника, ул. Банат 16А, София, България</address>
                     </div>
                 </div>
 
                 <div class="col-md-4">
                     <div class="contact-phone">
                         <i class="ion-ios-telephone-outline"></i>
-                        <h3>Phone Number</h3>
-                        <p><a href="tel:+155895548855">+1 5589 55488 55</a></p>
+                        <h3>Телефонен номер</h3>
+                        <p><a href="tel:+155895548855">0883 48-35-09</a></p>
                     </div>
                 </div>
 
                 <div class="col-md-4">
                     <div class="contact-email">
                         <i class="ion-ios-email-outline"></i>
-                        <h3>Email</h3>
-                        <p><a href="mailto:info@example.com">info@example.com</a></p>
+                        <h3>Имейл</h3>
+                        <p><a href="mailto:svetleto_gb@abv.bg">svetleto_gb@abv.bg</a></p>
                     </div>
                 </div>
 
@@ -393,33 +392,33 @@
         </div>
 
         <div class="container mb-4">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22864.11283411948!2d-73.96468908098944!3d40.630720240038435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY%2C+USA!5e0!3m2!1sen!2sbg!4v1540447494452" width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <iframe src="https://www.google.com/maps/embed/v1/place?q=42.6621927,23.3151003&key=AIzaSyDbGt__YIeakadb-qJdG34jOlJdqpngy4s" width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
 
         <div class="container">
             <div class="form">
-                <div id="sendmessage">Your message has been sent. Thank you!</div>
+                <div id="sendmessage">Вашето съобщение е изпратено успешно!</div>
                 <div id="errormessage"></div>
                 <form asp-controller="Email" asp-action="SendFromHome" method="post" role="form" class="contactForm">
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                            <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                            <input type="text" name="name" class="form-control" id="name" placeholder="Вашето име..." data-rule="minlen:4" data-msg="Моля, въведете поне четири символа!" />
                             <div class="validation"></div>
                         </div>
                         <div class="form-group col-md-6">
-                            <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+                            <input type="email" class="form-control" name="email" id="email" placeholder="Вашият имейл..." data-rule="email" data-msg="Моля, виведете валиден имейл!" />
                             <div class="validation"></div>
                         </div>
                     </div>
                     <div class="form-group">
-                        <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+                        <input type="text" class="form-control" name="subject" id="subject" placeholder="Относно..." data-rule="minlen:4" data-msg="Моля, въведете текст от поне четири символа!" />
                         <div class="validation"></div>
                     </div>
                     <div class="form-group">
-                        <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+                        <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Съобщение..."></textarea>
                         <div class="validation"></div>
                     </div>
-                    <div class="text-center"><button type="submit">Send Message</button></div>
+                    <div class="text-center"><button type="submit">Изпрати запитване</button></div>
                 </form>
             </div>
 
