--- a/src/Web/LearningPlusWebApp/Views/Shared/_HeaderPartial.cshtml
+++ b/src/Web/LearningPlusWebApp/Views/Shared/_HeaderPartial.cshtml
@@ -5,7 +5,7 @@
     <div class="container">
 
         <div id="logo" class="pull-left">
-            <h1><a asp-controller="Home" asp-action="Index" class="scrollto">Learning<span>Plus</span></a></h1>
+            <h1><a asp-controller="Home" asp-action="Index" class="scrollto">Научи<span>Повече</span></a></h1>
             <!-- Uncomment below if you prefer to use an image logo -->
             <!-- <a href="#body"><img src="img/logo.png" alt="" title="" /></a>-->
         </div>
