--- a/src/Web/LearningPlusWebApp/Views/Users/Login.cshtml
+++ b/src/Web/LearningPlusWebApp/Views/Users/Login.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model LearningPlus.Web.ViewModels.DoLoginViewModel
+
+@{
     ViewData["Title"] = "Вписване";
 }
 
@@ -10,13 +12,16 @@
 <h1 class="text-center">@ViewData["Title"]</h1>
 <hr class="quad-width" />
 <form class="mx-auto quad-width text-center" method="post" asp-controller="Users" asp-action="Login">
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="form-group">
-        <label for="username">Поребителско име</label>
+        <label asp-for="Username">Потребителско име</label>
         <input type="text" class="form-control" name="username" placeholder="Портебителско име...">
+        <span asp-validation-for="Username" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <lebel for="username">Парола</lebel>
-        <input type="password" class="form-control" name="password" placeholder="Парола" />
+        <label asp-for="Password">Парола</label>
+        <input type="password" class="form-control" name="password" placeholder="Парола..." />
+        <span asp-validation-for="Password" class="text-danger"></span>
     </div>
     <hr class="hr-login" />
     <div class="checkbox">
